# TweetAPI

./: .dockerignore  .flake8  Dockerfile  README.md  docker-compose.yaml  docker_init.sh  pyproject.toml
api/: alembic.ini  main.py  settings.py
api/alembic/versions/: e5a164d8a4c3_initial.py
api/controllers/: __init__.py  authenticate.py  controllers.py
api/controllers/media/: threads.py
api/environment/: dev.env.template  prod.env.template
api/exceptions/: __init__.py  exceptions.py  handlers.py
api/middlewares/: __init__.py  validate_media_middleware.py
api/migrations/: env.py
api/models/: managers.py  mixins.py  models.py  schemas.py
api/routers/: __init__.py  base.py  media.py  tweets.py  users.py
api/static/: index.html
api/static/js/: swagger-ui-bundle.js
api/tests/: common.py  conftest.py  db_utils.py  pytest.ini  test_media.py  test_tweet.py  test_users.py
api/utils/: lifespan.py
nginx/: nginx.conf  nginx.conf.template
postgres/: Dockerfile  init.sql  pg.env.template
postgres/config/: postgresql.conf
