[tool.poetry]
name = "twit-api"
version = "0.1.0"
description = ""
authors = ["Андрей Абрамов <bakminstof@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.101.0"
uvicorn = {extras = ["standart"], version = "^0.23.2"}
pydantic-settings = "^2.0.2"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.19"}
asyncpg = "^0.28.0"
alembic = "^1.11.2"
python-multipart = "^0.0.6"
sentry-sdk = {extras = ["fastapi"], version = "^1.30.0"}


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.4.1"
pep8-naming = "^0.13.3"
pylint = "^2.17.5"
flake8 = "^6.1.0"
flake8-bugbear = "^23.7.10"
flake8-pie = "^0.16.0"
flake8-json = "^23.7.0"
flake8-adjustable-complexity = "^0.0.6"
flake8-annotations-coverage = "^0.0.6"
flake8-annotations = "^3.0.1"
flake8-builtins = "^2.1.0"
flake8-cognitive-complexity = "^0.1.0"
flake8-commas = "^2.1.0"
flake8-comprehensions = "^3.14.0"
flake8-eradicate = "^1.5.0"
flake8-expression-complexity = "^0.0.11"
flake8-functions = "^0.0.8"
flake8-simplify = "^0.20.0"
flake8-scream = "^0.1.0"
flake8-print = "^5.0.0"
flake8-use-pathlib = "^0.3.0"
flake8-pylint = "^0.2.0"
flake8-black = "^0.3.6"
httpx = {extras = ["http2"], version = "^0.24.1"}
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
pytest-pep8 = "^1.0.6"
pytest-smartcov = "^0.3"
uvloop = "^0.17.0"

[tool.black]
line-length = 90
target-version = ['py311']
extend-exclude = '''
(
  migrations   # Django DB migrations
)
'''

[tool.mypy]
plugins = [
  "pydantic.mypy"
]

follow_imports = "normal"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.isort]
profile = "black"
line_length = 90
multi_line_output = 3
skip_gitignore = true
skip_glob = ["**/migrations/*", "**/versions/*"]
src_paths = ["./api"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
